--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </tfoot>
             </table>
         </div>
-        <h4>Kraken's Test Earthquake Check webpage</h4>
+        <h4>Kraken's Test Earthquake Check Webpage</h4>
     </div>
     <script src="./index.js"></script>
 </body>
