--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="card">
-        <h1>Last 7-days ago Earthquake Data in Myanmar</h1>
+        <h1>Kraken's <br> Last 7-days ago Earthquake Data in Myanmar</h1>
         <br>
         <div class="data">
             <table>
                 <thead>
-                    <tr>
+                    <tr class="table-header">
                         <td><b>Location</b></td>
                         <td><b>Time</b></td>
                         <td><b>Magnitude</b></td>
@@ -23,10 +23,10 @@
                 </tbody>
                 <tfoot>
                 </tfoot>
-            </table>
+            </table> 
         </div>
-        <h4>Kraken's Test Earthquake Check Webpage</h4>
     </div>
+
     <script src="./index.js"></script>
 </body>
 </html>
